--- a/app/src/main/res/layout/fragment_add_meal.xml
+++ b/app/src/main/res/layout/fragment_add_meal.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.along.android.healthmanagement.fragments.MedicationCurrentTabFragment">
+    tools:context="com.along.android.healthmanagement.fragments.medication.MedicationCurrentTabFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
