--- a/app/src/main/res/layout/fragment_diet.xml
+++ b/app/src/main/res/layout/fragment_diet.xml
@@ -5,63 +5,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     android:fastScrollEnabled="false"
-    tools:context="com.along.android.healthmanagement.fragments.DietFragment"
+    android:fitsSystemWindows="true"
+    tools:context="com.along.android.healthmanagement.fragments.diet.DietFragment"
     >
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="180dp"
+        android:fastScrollEnabled="false"
         android:fitsSystemWindows="true"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        android:fastScrollEnabled="false">
+        android:theme="@style/AppTheme.AppBarOverlay">
 
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            app:statusBarScrim="@android:color/transparent"
-            app:contentScrim="@android:color/transparent"
             android:background="@drawable/diet_background"
             android:fastScrollEnabled="false"
+            android:fitsSystemWindows="true"
+            app:contentScrim="@android:color/transparent"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:statusBarScrim="@android:color/transparent"
             >
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                android:fastScrollEnabled="false"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/AppTheme.PopupOverlay"
-                android:fastScrollEnabled="false"/>
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
 
             <RelativeLayout
                 android:id="@+id/rl_title"
-                android:layout_gravity="center"
-                app:layout_collapseMode="parallax"
-                android:layout_marginTop="12dp"
                 android:layout_width="108dp"
-                android:layout_height="108dp">
+                android:layout_height="108dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="12dp"
+                app:layout_collapseMode="parallax">
 
                 <ImageView
                     android:id="@+id/iv_title"
-                    android:src="@drawable/diet_circle"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="match_parent"
+                    android:src="@drawable/diet_circle" />
 
                 <TextView
                     android:id="@+id/tv_title"
-                    android:layout_centerVertical="true"
-                    android:layout_centerHorizontal="true"
-                    android:textSize="24sp"
-                    android:textColor="@color/whiteF1"
-                    android:text="1024"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:text="1024"
+                    android:textColor="@color/whiteF1"
+                    android:textSize="24sp" />
 
             </RelativeLayout>
 
