--- a/app/src/main/res/layout/fragment_medication_current.xml
+++ b/app/src/main/res/layout/fragment_medication_current.xml
@@ -1,26 +1,26 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_current_medication_id"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="48dp"
-    android:id="@+id/fragment_current_medication_id"
-    tools:context="com.along.android.healthmanagement.fragments.MedicationCurrentTabFragment">
+    tools:context="com.along.android.healthmanagement.fragments.medication.MedicationCurrentTabFragment">
 
     <TextView
         android:id="@+id/tvMLEmptyMsg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="No medication records to display"
         android:gravity="center"
         android:paddingTop="@dimen/large"
+        android:text="No medication records to display"
         android:textSize="20dp"
         android:textStyle="italic" />
 
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/current_medication_list"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical" />
 
 </FrameLayout>
