--- a/app/src/main/res/layout/fragment_medication_history.xml
+++ b/app/src/main/res/layout/fragment_medication_history.xml
@@ -3,23 +3,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="48dp"
-    tools:context="com.along.android.healthmanagement.fragments.MedicationHistoryTabFragment">
+    tools:context="com.along.android.healthmanagement.fragments.medication.MedicationHistoryTabFragment">
 
     <TextView
         android:id="@+id/tvMHEmptyMsg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="No medication history to display"
         android:gravity="center"
         android:paddingTop="@dimen/large"
+        android:text="No medication history to display"
         android:textSize="20dp"
         android:textStyle="italic" />
 
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/medication_history_list"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical" />
 
 </FrameLayout>
