--- a/app/src/main/res/layout/fragment_vital_signs.xml
+++ b/app/src/main/res/layout/fragment_vital_signs.xml
@@ -1,37 +1,37 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="com.along.android.healthmanagement.fragments.VitalSignTabFragment">
+    tools:context="com.along.android.healthmanagement.fragments.vitalsigns.VitalSignTabFragment">
     <TextView
         android:id="@+id/tvVSEmptyMsg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
         android:gravity="center"
         android:paddingTop="@dimen/large"
+        android:text=""
         android:textSize="20dp"
         android:textStyle="italic" />
 
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:id="@+id/vital_signs_history_list"
-              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_medication_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        app:srcCompat="@drawable/ic_fab_add"
-        android:layout_marginLeft="@dimen/fab_margin"
-        android:layout_marginRight="@dimen/fab_margin"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:layout_gravity="end|bottom"
         android:layout_marginBottom="10dp"
+        android:layout_marginLeft="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
+        app:srcCompat="@drawable/ic_fab_add"
         />
 
 </FrameLayout>
