--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,5 +19,7 @@
     <dimen name="list_item_bottom_margin">16dp</dimen>
     <dimen name="list_item_left_margin">16dp</dimen>
     <dimen name="list_item_right_margin">16dp</dimen>
+    <dimen name="home_feature_height">108dp</dimen>
+    <dimen name="feature_icon_dimen">52dp</dimen>
 
 </resources>
