--- a/app/src/main/res/layout/fragment_medication_listing.xml
+++ b/app/src/main/res/layout/fragment_medication_listing.xml
@@ -10,11 +10,21 @@
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.NoActionBar">
 
-        <SearchView
-            android:id="@+id/sv_medication_search_entry"
+        <LinearLayout
+            android:id="@+id/ll_medication_search_entry"
             android:layout_width="match_parent"
             android:layout_height="32dp"
-            android:background="@color/white"/>
+            android:orientation="horizontal"
+            android:background="@color/white">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="4dp"
+                android:background="@drawable/ic_menu_search"/>
+
+        </LinearLayout>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/medicationTabs"
