--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -43,7 +43,7 @@
     <color name="vitalSign6">#EFC0FF</color>
 
     <color name="dietBackground1">#6A80C7</color>
-    <color name="dietButton1">#39C580</color>
+    <color name="dietButton1">#39c580</color>
 
     <color name="dietButton2">#6ACA91</color>
     <color name="colordietbar">#71D3B6</color>
