--- a/app/src/main/res/layout/fragment_bmi_calculate.xml
+++ b/app/src/main/res/layout/fragment_bmi_calculate.xml
@@ -24,7 +24,7 @@
                 android:id="@+id/etWeight"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="Weight (lb)" />
+                android:hint="Weight (m)" />
         </android.support.design.widget.TextInputLayout>
 
     </LinearLayout>
@@ -45,7 +45,7 @@
                 android:id="@+id/etHeight"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="Height (in)" />
+                android:hint="Height (kg)" />
         </android.support.design.widget.TextInputLayout>
     </LinearLayout>
 
