--- a/app/src/main/res/layout/fragment_bmi_calculate.xml
+++ b/app/src/main/res/layout/fragment_bmi_calculate.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
-        android:text="BMI Calculate"
+        android:id="@+id/tvBmiCalculate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvBmiCalculate"  />
+        android:text="BMI Calculate" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,7 +25,8 @@
                 android:id="@+id/etWeight"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="Weight (kg)" />
+                android:hint="Weight (kg)"
+                android:inputType="numberDecimal" />
         </android.support.design.widget.TextInputLayout>
 
     </LinearLayout>
@@ -45,8 +47,64 @@
                 android:id="@+id/etHeight"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="Height (m)" />
+                android:hint="Height (cm)"
+                android:inputType="numberDecimal" />
         </android.support.design.widget.TextInputLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/medium"
+        android:orientation="horizontal">
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_age"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".33">
+
+            <EditText
+                android:id="@+id/etAgeBmi"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="Age (years)"
+                android:inputType="number" />
+        </android.support.design.widget.TextInputLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/medium"
+        android:orientation="horizontal">
+
+        <RadioGroup
+            android:id="@+id/radioGroupGenderBmi"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".6"
+            android:checkedButton="@+id/radioMale"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/radioMaleBmi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Male"
+                android:textAppearance="?android:textAppearanceMedium"
+                android:textColor="@color/black3" />
+
+            <RadioButton
+                android:id="@+id/radioFemaleBmi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Female"
+                android:textAppearance="?android:textAppearanceMedium"
+                android:textColor="@color/black3" />
+        </RadioGroup>
+
     </LinearLayout>
 
     <LinearLayout
@@ -54,11 +112,11 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:text=""
+            android:id="@+id/tv_bmi_result"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="65px"
-            android:id="@+id/tv_bmi_result" />
+            android:text=""
+            android:textSize="65px" />
     </LinearLayout>
 
     <LinearLayout
