--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -13,5 +13,12 @@
               android:layout_height="match_parent"
               android:background="@android:color/background_light"
               android:orientation="vertical"/>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add_note_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@drawable/ic_fab_add" />
 
 </FrameLayout>
