--- a/app/src/main/res/layout/fragment_bmi_calculate.xml
+++ b/app/src/main/res/layout/fragment_bmi_calculate.xml
@@ -2,13 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="@dimen/large">
 
     <TextView
         android:id="@+id/tvBmiCalculate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="BMI Calculate" />
+        android:text="Calculate BMI"
+        android:textAppearance="?android:textAppearanceMedium" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -109,20 +111,21 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/medium">
 
         <TextView
             android:id="@+id/tv_bmi_result"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text=""
-            android:textSize="65px" />
+            android:textAppearance="?android:textAppearanceMedium" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:orientation="horizontal">
 
         <Button
