--- a/app/src/main/res/layout/gridview_item_select.xml
+++ b/app/src/main/res/layout/gridview_item_select.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<com.demo.testimgloader.SquareLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.along.android.healthmanagement.layouts.SquareLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="80dp"
     android:layout_height="80dp">
 
@@ -8,4 +8,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop" />
-</com.demo.testimgloader.SquareLayout>
+</com.along.android.healthmanagement.layouts.SquareLayout>
