--- a/app/src/main/res/layout/fragment_diet.xml
+++ b/app/src/main/res/layout/fragment_diet.xml
@@ -39,42 +39,45 @@
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-            <RelativeLayout
-                android:id="@+id/rl_title"
-                android:layout_width="108dp"
-                android:layout_height="108dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="12dp"
-                app:layout_collapseMode="parallax">
-
-                <ImageView
-                    android:id="@+id/iv_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/diet_circle" />
-
-                <TextView
-                    android:id="@+id/tv_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:text="1024"
-                    android:textColor="@color/whiteF1"
-                    android:textSize="24sp" />
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/tv_calorie_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="1024"
-                android:textColor="@color/whiteF1"
-                android:textSize="16sp" />
-
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
+
+    <RelativeLayout
+        android:id="@+id/rl_title"
+        android:layout_width="108dp"
+        android:layout_height="108dp"
+        android:layout_marginTop="16dp"
+        android:layout_gravity="center"
+        app:layout_anchor="@id/app_bar"
+        app:layout_anchorGravity="center"
+        app:layout_collapseMode="parallax">
+
+        <ImageView
+            android:id="@+id/iv_title"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/diet_circle" />
+
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="1024"
+            android:textColor="@color/whiteF1"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/tv_calorie_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_above="@id/tv_title"
+            android:textColor="@color/whiteF1"
+            android:textSize="16sp" />
+    </RelativeLayout>
 
     <include layout="@layout/diet_content_scrolling"
              android:fastScrollEnabled="false"/>
