--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -187,7 +187,7 @@
         android:layout_marginTop="@dimen/small_margin"
         android:layout_alignBaseline="@id/btn_register"
         android:id="@+id/register_text"
-        android:text="New User?"/>
+        android:text="UserEntityUser?"/>
 
     <Button
         android:id="@+id/btn_forget_password"
